# aws-mfa-login

./: Cargo.toml  Readme.md
cfn/: aws-mfa-login.yaml
src/: main.rs
