[package]
name = "aws-mfa-login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.3"
aws-sdk-sts = "0.3"
tokio = { version = "1", features = ["full"] }
configparser = "3.0"
dirs = "4.0"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
figment = { version = "0.10", features = ["toml"] }
